crates/bc-cli/tests/cli/snapshots/cli__report__net_worth_empty.snap
---
source: crates/bc-cli/tests/cli/report.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
No asset or liability accounts.
----- stderr -----
note: net-worth currently shows AUD balances only; multi-currency support requires Milestone 5
