crates/bc-cli/tests/cli/snapshots/cli__report__net_worth_empty_json.snap
---
source: crates/bc-cli/tests/cli/report.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
{
  "accounts": [],
  "commodity": "AUD",
  "converted": {},
  "total": "0",
  "unvalued": {}
}
----- stderr -----
