crates/bc-cli/tests/cli/snapshots/cli__report__net_worth_includes_manual_asset_at_market_value.snap
---
source: crates/bc-cli/tests/cli/report.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
{
  "accounts": [
    {
      "account": "Family Home",
      "balance": "750000.00",
      "commodity": "AUD",
      "in_total": "750000.00",
      "kind": "manual asset",
      "valuation": "native"
    }
  ],
  "commodity": "AUD",
  "converted": {},
  "total": "750000.00",
  "unvalued": {}
}
----- stderr -----
