crates/bc-cli/tests/cli/snapshots/cli__report__summary_calendar_year_empty.snap
---
source: crates/bc-cli/tests/cli/report.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
Report: 2026-01-01 – 2027-01-01 (0 transactions)
----- stderr -----
