crates/bc-cli/tests/cli/snapshots/cli__report__summary_monthly_empty.snap
---
source: crates/bc-cli/tests/cli/report.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
Report: 2026-03-01 – 2026-04-01 (0 transactions)
----- stderr -----
